Update download link. Remove tar & zip link

--- a/index.html
+++ b/index.html
@@ -20,11 +20,6 @@
 
           <h1 id="project_title">Angular progress</h1>
           <h2 id="project_tagline">RubyGem and Javascript to track HTTP Progress and use spinner and progress indicators.</h2>
-
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/tusharr/angular_progress/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/tusharr/angular_progress/tarball/master">Download this project as a tar.gz file</a>
-            </section>
         </header>
     </div>
 
@@ -44,7 +39,11 @@
 <h4>
 <a name="javascript" class="anchor" href="#javascript"><span class="octicon octicon-link"></span></a>Javascript</h4>
 
-<p><a href="https://raw.githubusercontent.com/tusharr/angular_progress/master/compiled/angular_progress.js">Download Javascript</a></p>
+<p>
+    <!--<section id="downloads">-->
+        <a class="download_link" href="https://raw.githubusercontent.com/tusharr/angular_progress/master/compiled/angular_progress.js">Download Javascript</a>
+    <!--</section>-->
+</p>
 
 <h4>
 <a name="ruby-gem" class="anchor" href="#ruby-gem"><span class="octicon octicon-link"></span></a>Ruby gem</h4>
